Bug 52107 - : Pasting crashing Spreadsheet
Summary: : Pasting crashing Spreadsheet
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
3.6.0.1 rc
Hardware: Other All
: medium normal
Assignee: Markus Mohrhard
URL:
Whiteboard: BSA target:3.7.0 target:3.6.0.2 targe...
Keywords:
Depends on:
Blocks:
 
Reported: 2012-07-15 01:43 UTC by James
Modified: 2012-07-15 07:45 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description James 2012-07-15 01:43:18 UTC
Problem description: When you paste a set amount of data from a html table it causes the program to crash and close

Steps to reproduce:
1. select and copy data from the html table, such as http://www.nesworld.com/fdslist.php
2. attempt to paste into spreadsheet
3. watch the crash

Current behavior: program crashes

Expected behavior: import data into the spreadsheet

Platform (if different from the browser): 
              
Browser: Mozilla/5.0 (X11; Ubuntu; Linux x86_64; rv:13.0) Gecko/20100101 Firefox/13.0.1
Comment 1 Not Assigned 2012-07-15 01:50:44 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=0d21d9ddbe0561f45419ae4fc376c312565b413b

prevent double delete in calc's html parser, fdo#52107
Comment 2 Not Assigned 2012-07-15 07:38:14 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "libreoffice-3-6":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=02e0c1b0e8e0b798694445bfa84383dd8d44216a&g=libreoffice-3-6

prevent double delete in calc's html parser, fdo#52107


It will be available in LibreOffice 3.6.
Comment 3 Not Assigned 2012-07-15 07:44:48 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "libreoffice-3-5":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=5a86dee80fed8470213186294169582b89cf497f&g=libreoffice-3-5

prevent double delete in calc's html parser, fdo#52107


It will be available in LibreOffice 3.5.6.