prevent double delete in calc's html parser, fdo#52107

Change-Id: I0a203a39697d3b12304e4b9dc99714cd7b2a008c
(cherry picked from commit 0d21d9ddbe0561f45419ae4fc376c312565b413b)

Signed-off-by: Caolán McNamara <caolanm@redhat.com>